# ez_paging

./: .cspell.json  Cargo.toml  README.md
src/: addr_translation.rs  frame.rs  lib.rs  managed_pat.rs  max_page_size.rs  owned_4kib_frame.rs  page.rs  page_size.rs  paging_config.rs  virtual_offset.rs
src/managed_l4_table/: configurable_flags.rs  managed_l4_page_table.rs  map_page.rs  mod.rs  page_table_entry_with_level.rs  page_table_with_level.rs  unmap_page.rs  update_flags.rs
